--- a/js/operators.html
+++ b/js/operators.html
@@ -53,7 +53,7 @@
     </script>
     <script>
         let age_ = 17;
-        let eligibility = (age_ > 18) ? "eligible foe vote" : "not eligible";
+        let eligibility = (age_ > 18) ? "Eligible for  vote" : "Not eligible";
         document.write("eligibility");
     </script>
 </body>
